--- a/nimai_test/test/templates/index.html
+++ b/nimai_test/test/templates/index.html
@@ -11,7 +11,10 @@
 {% block content %}
 {% if user.is_authenticated %}
 <div class="h2">Welcome {{ user.first_name }} {{ user.last_name }}</div>
+<!-- added logout botton -->
+<a href="{% url 'accounts:logout' %}" class="btn btn-primary">Logout</a> 
 {% else %}
 <a href="{% url 'accounts:signup' %}" class="btn btn-primary">Signup</a>
+<a href="{% url 'accounts:login' %}" class="btn btn-primary">Login</a>
 {% endif %}
 {% endblock %}
