login more or less done

--- a/lagonzal_test/frontend/style/login.css
+++ b/lagonzal_test/frontend/style/login.css
@@ -1,22 +1,24 @@
 .login-area {
-	padding: 15px; /* Padding alrededor de los botones */
 	background-color: rgb(219, 219, 219); /* Fondo gris */
-	border-radius: 12px; /* Bordes redondeados */
-	max-width: 600px; /* Ancho máximo */
-	width: 100%; /* Ancho completo hasta el límite de max-width */
-	box-shadow: 0 4px 8px rgb(0, 0, 1); /* Sombra para profundidad */
-    color:black;
-}
-
-.title
-{
+    padding: 32px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.075); /* 0.125rem to 2px, 0.25rem to 4px */
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    color: black;
+    width: 100%;
+    max-width: 300px;
 }
 
-.login-title-text {
-    padding: 10px;
-    margin-bottom: 10px;
-    color: black;
+.login-title-text
+{
+    margin-bottom: 16px;
+}
+
+.form-group
+{
+    margin-bottom: 16px;
 }
 
 .submit-login-btn
@@ -29,6 +31,6 @@
 .submit-login-btn:hover
 {
 	
-	background-color: rgb(181, 0, 0); /* Verde más oscuro al pasar el cursor */
+	background-color: rgb(181, 0, 0);
 	color: white
 }
