Login and signup routes and injection fixed

--- a/frontend/pong-app/projects/pong/src/app/home/home.component.html
+++ b/frontend/pong-app/projects/pong/src/app/home/home.component.html
@@ -14,10 +14,10 @@
                     <button class="btn btn-custom" id="play-tutorial">TUTORIAL</button>
                 </div>
                 <div class="col-12 col-md-6 mb-3">
-                    <button routerLink="/login" class="btn btn-login" id="btn-login">INICIAR SESIÓN</button>
+                    <button routerLink="/login" class="btn btn-login" id="btn-login">LOG IN</button>
                 </div>
                 <div class="col-12 col-md-6 mb-3">
-                    <button routerLink="/singin" class="btn btn-singin" id="btn-singin">CREAR CUENTA</button>
+                    <button routerLink="/signup" class="btn btn-singin" id="btn-singin">SIGN UP</button>
                 </div>
             </div>
         </div>
