New single player menu, UniquePlayerNamesValidator fixed to use any number of players

--- a/frontend/pong-app/projects/pong/src/app/home/home.component.html
+++ b/frontend/pong-app/projects/pong/src/app/home/home.component.html
@@ -2,7 +2,7 @@
         <div class="button-area" id="button-area">
             <div class="row">
                 <div class="col-12 mb-3">
-                    <button class="btn btn-custom" id="play-local">PARTIDA LOCAL</button>
+                    <button routerLink="/local-play" class="btn btn-custom" id="play-local">PARTIDA LOCAL</button>
                 </div>
                 <div class="col-12 mb-3">
                     <button class="btn btn-custom" id="play-online">PARTIDA ONLINE</button>
