--- a/frontend/pong-app/projects/pong/src/app/local-play/local-play.component.html
+++ b/frontend/pong-app/projects/pong/src/app/local-play/local-play.component.html
@@ -1,1 +1,23 @@
-<p>local-play works!</p>
+<div class="localPlayNameArea container-fluid d-flex justify-content-center align-items-center">
+    <h2 class="localPlayFormTitle text-center mb-4">Name selection</h2>
+    <form [formGroup]="localPlayForm" (ngSubmit)="onSubmit()">
+      <div class="formGroup">
+        <label for="player1">Player 1</label>
+        <input id="player1" formControlName="player1">
+        <div *ngIf="localPlayForm.get('player1')?.touched && localPlayForm.get('player1')?.invalid">
+          <small class="text-danger">Invalid name</small>
+        </div>
+      </div>
+      <div class="formGroup">
+        <label for="player2">Player 2</label>
+        <input id="player2" formControlName="player2">
+        <div *ngIf="localPlayForm.get('player2')?.touched && localPlayForm.get('player2')?.invalid">
+          <small class="text-danger">Invalid name</small>
+        </div>
+      </div>
+      <button class="submit-login-btn" type="submit">Ready</button>
+      <div *ngIf="localPlayForm.errors?.['nonUniquePlayers'] && localPlayForm.get('player2')?.touched && localPlayForm.get('player1')?.touched">
+        <small class="text-danger">Player names must be unique.</small>
+      </div>
+    </form>
+</div>
