empezando views de logica de friends

--- a/frontend/pong-app/projects/pong/src/app/signup/signup.component.html
+++ b/frontend/pong-app/projects/pong/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<h2 class="singin-title text-center mb-4">Sing in</h2>
+<h2 class="singin-title text-center mb-4">Sing up</h2>
 
 <div class="singin-area container-fluid d-flex justify-content-center align-items-center">
   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
