mod sing up | mod header buttons | added profile

--- a/frontend/pong-app/projects/pong/src/app/header/header.component.html
+++ b/frontend/pong-app/projects/pong/src/app/header/header.component.html
@@ -1,15 +1,15 @@
 <header class="container-fluid">
     <div class="logo">
-        <button routerLink="" class="home-button col-12" id="home-button"><img src="../../assets/PongLogo.png" alt="Pong page logo"></button>
-    </div>
-    <div>
-        <button routerLink="/search"  class="header-button" id="search-button">
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg> -->
-            SearchButtonPH
+        <button routerLink="" class="home-button" id="home-button">
+            <img src="../../assets/PongLogo.png" alt="Pong page logo">
         </button>
-        <button class="header-button" id="profile-button">
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.<path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg> -->
-            ProfileButtonPH
+    </div>
+    <div class="buttons">
+        <button routerLink="/search" class="btn-search" id="search-button">
+            Search
+        </button>
+        <button routerLink="/profile" class="btn-profile" id="profile-button">
+            Profile
         </button>
     </div>
 </header>
