--- a/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
+++ b/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
@@ -1,1 +1,38 @@
-<p>profile works!</p>
+<div class="profile-container">
+    <div class="profile-header">
+        <div class="profile-image">
+            <img src="../../assets/Profile_placeholder.png" alt="Profile Picture">
+        </div>
+        <div class="profile-details">
+            <h2 class="player-name">Player Name</h2>
+            <div class="player-stats">
+                <p>Games Played: 50</p>
+                <p>Wins: 30</p>
+                <p>Losses: 20</p>
+                <p>Win Rate: 60%</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="profile-body">
+        <div class="friends-list">
+            <h3>Friends</h3>
+            <ul>
+                <!-- Estos elementos se llenarán dinámicamente desde la base de datos -->
+                <li>Friend 1</li>
+                <li>Friend 2</li>
+                <li>Friend 3</li>
+            </ul>
+        </div>
+        
+        <div class="match-history">
+            <h3>Match History</h3>
+            <ul>
+                <!-- Estos elementos se llenarán dinámicamente desde la base de datos -->
+                <li><span class="match">Match 1: Win</span><hr class="separator"></li>
+                <li><span class="match">Match 2: Loss</span><hr class="separator"></li>
+                <li><span class="match">Match 3: Win</span><hr class="separator"></li>
+            </ul>
+        </div>
+    </div>
+</div>
