--- a/frontend/pong-app/projects/pong/src/app/signup/signup.component.html
+++ b/frontend/pong-app/projects/pong/src/app/signup/signup.component.html
@@ -1,14 +1,20 @@
-<h2 class="singin-title text-center mb-4">Sing in</h2>
+<h2 class="singin-title text-center mb-4">Sing up</h2>
 
 <div class="singin-area container-fluid d-flex justify-content-center align-items-center">
   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
     <div class="formGroup">
+      <label for="email">email</label>
+      <input id="email" formControlName="email">
+      <div *ngIf="signupForm.get('email')?.touched && signupForm.get('email')?.invalid">
+        <small class="text-danger">Invalid email</small>
+      </div>
+    </div>
+    <div class="formGroup"></div>
       <label for="username">Username</label>
       <input id="username" formControlName="username">
       <div *ngIf="signupForm.get('username')?.touched && signupForm.get('username')?.invalid">
         <small class="text-danger">Invalid username</small>
       </div>
-    </div>
     <div class="formGroup">
       <label for="password">Password</label>
       <input id="password" type="password" formControlName="password">
@@ -16,6 +22,6 @@
         <small class="text-danger">Invalid password</small>
       </div>
     </div>
-    <button class="submit-singin-btn" type="submit">singin</button>
+    <button class="submit-singin-btn" type="submit">sing up</button>
   </form>
 </div>
