--- a/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
+++ b/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
@@ -1,38 +1,34 @@
 <div class="profile-container">
-    <div class="profile-header">
-        <div class="profile-image">
-            <img src="../../assets/Profile_placeholder.png" alt="Profile Picture">
-        </div>
-        <div class="profile-details">
-            <h2 class="player-name">Player Name</h2>
-            <div class="player-stats">
-                <p>Games Played: 50</p>
-                <p>Wins: 30</p>
-                <p>Losses: 20</p>
-                <p>Win Rate: 60%</p>
-            </div>
-        </div>
+  <!-- Imagen de perfil -->
+  <div class="profile-header">
+    <div class="profile-image">
+      <img [src]="userProfile?.photo_url" alt="Foto de perfil">
+    </div>
+    <!-- Detalles del jugador -->
+    <div class="profile-details">
+      <h2>{{ userProfile?.name }}</h2>
+      <p>Email: {{ userProfile?.email }}</p>
+      <p>Partidas Jugadas: {{ userProfile?.games_played }}</p>
+      <p>Victorias: {{ userProfile?.victories }}</p>
+    </div>
+  </div>
+  
+  <!-- Cuerpo del perfil con lista de amigos y historial de partidas -->
+  <div class="profile-body">
+    <div class="friends-list">
+      <h3>Amigos</h3>
+      <ul>
+        <li *ngFor="let friend of userProfile?.friends">{{ friend.name }}</li>
+      </ul>
     </div>
 
-    <div class="profile-body">
-        <div class="friends-list">
-            <h3>Friends</h3>
-            <ul>
-                <!-- Estos elementos se llenarán dinámicamente desde la base de datos -->
-                <li>Friend 1</li>
-                <li>Friend 2</li>
-                <li>Friend 3</li>
-            </ul>
-        </div>
-        
-        <div class="match-history">
-            <h3>Match History</h3>
-            <ul>
-                <!-- Estos elementos se llenarán dinámicamente desde la base de datos -->
-                <li><span class="match">Match 1: Win</span><hr class="separator"></li>
-                <li><span class="match">Match 2: Loss</span><hr class="separator"></li>
-                <li><span class="match">Match 3: Win</span><hr class="separator"></li>
-            </ul>
-        </div>
+    <div class="match-history">
+      <h3>Historial de Partidas</h3>
+      <ul>
+        <li *ngFor="let match of userProfile?.match_history">
+          {{ match.opponent }} - {{ match.result }}
+        </li>
+      </ul>
     </div>
+  </div>
 </div>
