--- a/frontend/pong-app/projects/pong/src/app/home/home.component.html
+++ b/frontend/pong-app/projects/pong/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
         <div class="button-area" id="button-area">
             <div class="row">
-                <div class="col-12 mb-3">
+                <div class="col-12 mb-3" >
                     <button routerLink="/local-play" class="btn btn-custom" id="play-local">PARTIDA LOCAL</button>
                 </div>
                 <div class="col-12 mb-3">
@@ -13,11 +13,14 @@
                 <div class="col-12 mb-3">
                     <button class="btn btn-custom" id="play-tutorial">TUTORIAL</button>
                 </div>
-                <div class="col-12 col-md-6 mb-3">
+                <div class="col-12 col-md-6 mb-3" *ngIf="!authService.isAuthenticated()">
                     <button routerLink="/login" class="btn btn-login" id="btn-login">LOG IN</button>
                 </div>
-                <div class="col-12 col-md-6 mb-3">
+                <div class="col-12 col-md-6 mb-3" *ngIf="!authService.isAuthenticated()">
                     <button routerLink="/signup" class="btn btn-singin" id="btn-singin">SIGN UP</button>
+                </div>
+                <div class="col-12 mb-3" *ngIf="authService.isAuthenticated()">
+                    <button class="btn btn-signout" id="btn-signout" (click)="onLogout()">SIGN OUT</button>
                 </div>
             </div>
         </div>
