Last chages to profile

--- a/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
+++ b/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
@@ -25,6 +25,7 @@
     <div class="match-history">
       <h3>Historial de Partidas</h3>
       <ul>
+        <p>This is a place holder</p>
         <li *ngFor="let match of userProfile?.match_history">
           {{ match.opponent }} - {{ match.result }}
         </li>
