no hace nada todavia, aprendiendo sobre como funciona Django Channels y los consumers

--- a/backend/liveCalculator/templates/liveCalculator/room.html
+++ b/backend/liveCalculator/templates/liveCalculator/room.html
@@ -16,10 +16,12 @@
         const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
-            + '/ws/calc/'
+            + '/calc/'
             + roomName
             + '/'
         );
+
+        console.log(chatSocket)
 
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
