solved imports | new profile pics | func user info don't disply in html, console is fine

--- a/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
+++ b/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
   <!-- Imagen de perfil -->
   <div class="profile-header">
     <div class="profile-image">
-      <img [src]="userProfile?.photo_url" alt="Foto de perfil">
+      <img [src]="userProfile?.photo_url || 'assets/Profile_placeholder.png'" alt="profile-image">
     </div>
     <!-- Detalles del jugador -->
     <div class="profile-details">
