something is failing

--- a/frontend/pong-app/projects/pong/src/app/home/home.component.html
+++ b/frontend/pong-app/projects/pong/src/app/home/home.component.html
@@ -5,7 +5,7 @@
                     <button routerLink="/local-play" class="btn btn-custom" id="play-local">PARTIDA LOCAL</button>
                 </div>
                 <div class="col-12 mb-3">
-                    <button class="btn btn-custom" id="play-online">PARTIDA ONLINE</button>
+                    <button routerLink="/matchmaking" class="btn btn-custom" id="play-online">PARTIDA ONLINE</button>
                 </div>
                 <div class="col-12 mb-3">
                     <button routerLink="/tournament"class="btn btn-custom" id="play-tournament">TORNEO</button>
