he fastidiado varias cosas pero bueno, mañana las arreglo

--- a/frontend/pong-app/projects/pong/src/app/header/header.component.html
+++ b/frontend/pong-app/projects/pong/src/app/header/header.component.html
@@ -5,9 +5,9 @@
         </button>
     </div>
     <div class="buttons">
-        <button routerLink="/search" class="btn-search" id="search-button">
+        <!-- <button routerLink="/search" class="btn-search" id="search-button">
             Search
-        </button>
+        </button> -->
         <button *ngIf="isLoggedIn" 
                 (click)="navigateToProfile()" 
                 class="btn-profile" 
