--- a/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
+++ b/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
@@ -14,9 +14,9 @@
                     <div class="avatar-container">
                         <img [src]="userAvatar" alt="User avatar" class="user-avatar" [attr.cache-control]="'no-cache'">
                         <span class="online-status" [class.online]="isUserOnline"></span>
-                        <button *ngIf="isOwnProfile" (click)="showUpdateProfile()" class="edit-profile-btn">
+                        <!-- <button *ngIf="isOwnProfile" (click)="showUpdateProfile()" class="edit-profile-btn">
                             Edit Profile
-                        </button>
+                        </button> -->
                     </div>
                 </div>
 
