--- a/frontend/pong-app/projects/pong/src/app/login/login.component.css
+++ b/frontend/pong-app/projects/pong/src/app/login/login.component.css
@@ -37,3 +37,16 @@
 	background-color: rgb(181, 0, 0);
 	color: white
 }
+
+.alert {
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 4px;
+    width: 100%;
+  }
+  
+  .alert-danger {
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb;
+    color: #721c24;
+  }
