profiles working correctl, chat working correctly, user management module basically done

--- a/frontend/pong-app/projects/pong/src/app/chat/chat.component.css
+++ b/frontend/pong-app/projects/pong/src/app/chat/chat.component.css
@@ -98,3 +98,13 @@
     width: 24px;
     height: 24px;
   }
+
+  .username-link {
+    color: #007bff;
+    cursor: pointer;
+    text-decoration: underline;
+  }
+
+  .username-link:hover {
+    color: #0056b3;
+  }
