Starting 4 player mode

--- a/frontend/pong-app/projects/pong/src/app/home/home.component.html
+++ b/frontend/pong-app/projects/pong/src/app/home/home.component.html
@@ -2,10 +2,10 @@
         <div class="button-area" id="button-area">
             <div class="row">
                 <div class="col-12 mb-3" >
-                    <button routerLink="/local-play" class="btn btn-custom" id="play-local">PARTIDA LOCAL</button>
+                    <button routerLink="/local-play" class="btn btn-custom" id="play-local-2">2 JUGADORES</button>
                 </div>
                 <div class="col-12 mb-3">
-                    <button class="btn btn-custom" id="play-online">PARTIDA ONLINE</button>
+                    <button routerLink="/local-play-4" class="btn btn-custom" id="play-local-4">4 JUGADORES</button>
                 </div>
                 <div class="col-12 mb-3">
                     <button routerLink="/tournament"class="btn btn-custom" id="play-tournament">TORNEO</button>
