--- a/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
+++ b/frontend/pong-app/projects/pong/src/app/profile/profile.component.html
@@ -84,7 +84,7 @@
                     <li *ngFor="let friend of friends" class="list-item">
                         <div class="friend-info">
                             <span class="friend-name">{{ friend.username }}</span>
-                            <span class="online-status" [class.online]="friend.is_online"></span>
+                            <span class="online-status" [class.online]="isUserOnline_f(friend.id)"></span>
                         </div>
                         <div class="action-buttons" *ngIf="isOwnProfile">
                             <button (click)="startChat(friend.username)" class="action-button chat">Chat</button>
