Basic logic done, upper and bottom paddles dont move to the right end of the canvas, needs more checking

--- a/frontend/pong-app/projects/pong/src/app/home/home.component.html
+++ b/frontend/pong-app/projects/pong/src/app/home/home.component.html
@@ -5,7 +5,7 @@
                     <button routerLink="/local-play" class="btn btn-custom" id="play-local-2">2 JUGADORES</button>
                 </div>
                 <div class="col-12 mb-3">
-                    <button routerLink="/local-play-4" class="btn btn-custom" id="play-local-4">4 JUGADORES</button>
+                    <button routerLink="/multiplayer" class="btn btn-custom" id="play-local-4">4 JUGADORES</button>
                 </div>
                 <div class="col-12 mb-3">
                     <button routerLink="/tournament"class="btn btn-custom" id="play-tournament">TORNEO</button>
