--- a/frontend/pong-app/projects/pong/src/app/layout/layout.component.html
+++ b/frontend/pong-app/projects/pong/src/app/layout/layout.component.html
@@ -1,3 +1,5 @@
-<div class="main-container">
+<app-header></app-header>
+<main class="main-content">
     <router-outlet></router-outlet>
-</div>
+</main>
+<app-footer></app-footer>
