tournaments done, match history next

--- a/frontend/pong-app/projects/pong/src/app/tournament/tournament.component.html
+++ b/frontend/pong-app/projects/pong/src/app/tournament/tournament.component.html
@@ -92,3 +92,7 @@
     </div>
   </div>
 </div>
+
+<div *ngIf="countdownSeconds > 0">
+  Next match starting in {{ countdownSeconds }} seconds...
+</div>
